# lunar-calendar

./: .travis.yml  Makefile.am  NEWS  README.md  configure.ac  lunar-calendar-3.0.pc.in  meson.build  meson_options.txt
docs/: lunar-calendar-docs.xml  meson.build
docs/reference/: lunar-calendar3-docs.sgml  lunar-calendar3-sections.txt
example/: calendar.vala  gjs.js  python.py  seed.js
lunar-calendar/: Makefile.am  lunar-calendar-preload.c  lunar-calendar-version.c  lunar-calendar-version.h.in  lunar-calendar-win32.rc.in  lunar-calendar.c  lunar-calendar.h  lunar-calendar.symbols  meson.build
modules/: README.md  meson.build  module.c
po/: zh_CN.po  zh_TW.po
tests/: Makefile.am  meson.build  test-calendar.c
vapi/: Makefile.am  lunar-calendar-3.0.deps
